--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
 
 			function adjustCanvasDimensions() {
 				var scale = window.devicePixelRatio || 1;
-				var width = window.innerWidth;
-				var height = window.innerHeight;
+				//var width = window.innerWidth;
+				var width = 1024;
+				//var height = window.innerHeight;
+				var height = 600;
 				canvas.width = width * scale;
 				canvas.height = height * scale;
 				canvas.style.width = width + "px";
