--- a/index.html
+++ b/index.html
@@ -169,8 +169,10 @@
 				var width = 1024;
 				//var height = window.innerHeight;
 				var height = 600;
-				canvas.width = width * scale;
-				canvas.height = height * scale;
+				//canvas.width = width * scale;
+				canvas.width = width;
+				//canvas.height = height * scale;
+				canvas.height = height;
 				canvas.style.width = width + "px";
 				canvas.style.height = height + "px";
 			}
