--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 		#status {
 			position: absolute;
+			margin: auto;
 			left: 0;
 			top: 0;
 			right: 0;
@@ -119,6 +120,10 @@
 		HTML5 canvas appears to be unsupported in the current browser.<br />
 		Please try updating or use a different browser.
 	</canvas>
+	<div id='header'>
+		<h1>Welcome to the BrisbaneSDE Virtual Art Gallery</h1>
+		<p>Click on the <b>Play</b> button below to start.</p>
+	</div>
 	<div id='status'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
 		<div id='status-indeterminate' style='display: none;' oncontextmenu='event.preventDefault();'>
