--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
 		 * ============== */
 
 		#status {
-			position: absolute;
 			margin: auto;
-			left: 0;
-			top: 0;
-			right: 0;
-			bottom: 0;
+			width: 75%;
+			border: 1px solid black;
+			padding: 10px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
