--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 		}
 
 		#canvas:focus {
-			outline: none;
+			margin: auto;
+			width: 75%;
+			border: 1px solid black;
+			padding: 10px;
 		}
 
 		.godot {
