--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 		}
 
 		#canvas {
-			display: block;
 			margin: 0;
 			color: white;
-		}
-
-		#canvas:focus {
 			margin: auto;
 			width: 75%;
 			border: 1px solid black;
 			padding: 10px;
+		}
+
+		#canvas:focus {
+			outline: none;
 		}
 
 		.godot {
