--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 		}
 
 		#canvas {
-			margin: 0;
 			color: white;
-			margin: auto;
-			width: 75%;
-			border: 1px solid black;
-			padding: 10px;
+			padding-left: 0;
+			padding-right: 0;
+			margin-left: auto;
+			margin-right: auto;
+			display: block;
+			width: 1024px;
 		}
 
 		#canvas:focus {
@@ -117,6 +118,9 @@
 
 </head>
 <body>
+	<br>
+	<br>
+	<br>
 	<canvas id='canvas'>
 		HTML5 canvas appears to be unsupported in the current browser.<br />
 		Please try updating or use a different browser.
