--- a/index.html
+++ b/index.html
@@ -125,9 +125,12 @@
 		HTML5 canvas appears to be unsupported in the current browser.<br />
 		Please try updating or use a different browser.
 	</canvas>
+	<div id='start'>
+		<button id='play'onclick='runProgram()'>Play</button>
+	</div>
 	<div id='header'>
 		<h1>Welcome to the BrisbaneSDE Virtual Art Gallery</h1>
-		<p>Click on the <b>Play</b> button below to start.</p>
+		<p>Click on the <b>Play</b> button above to start.</p>
 	</div>
 	<div id='status'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
@@ -146,136 +149,138 @@
 
 	<script type='text/javascript' src='index.js'></script>
 	<script type='text/javascript'>//<![CDATA[
+		function runProgram()
+		{
+			var engine = new Engine;
+			var setStatusMode;
+			var setStatusNotice;
 
-		var engine = new Engine;
-		var setStatusMode;
-		var setStatusNotice;
+			(function() {
 
-		(function() {
+				const EXECUTABLE_NAME = 'index';
+				const MAIN_PACK = 'index.pck';
+				const INDETERMINATE_STATUS_STEP_MS = 100;
 
-			const EXECUTABLE_NAME = 'index';
-			const MAIN_PACK = 'index.pck';
-			const INDETERMINATE_STATUS_STEP_MS = 100;
+				var canvas = document.getElementById('canvas');
+				var statusProgress = document.getElementById('status-progress');
+				var statusProgressInner = document.getElementById('status-progress-inner');
+				var statusIndeterminate = document.getElementById('status-indeterminate');
+				var statusNotice = document.getElementById('status-notice');
 
-			var canvas = document.getElementById('canvas');
-			var statusProgress = document.getElementById('status-progress');
-			var statusProgressInner = document.getElementById('status-progress-inner');
-			var statusIndeterminate = document.getElementById('status-indeterminate');
-			var statusNotice = document.getElementById('status-notice');
+				var initializing = true;
+				var statusMode = 'hidden';
 
-			var initializing = true;
-			var statusMode = 'hidden';
-
-			var animationCallbacks = [];
-			function animate(time) {
-				animationCallbacks.forEach(callback => callback(time));
+				var animationCallbacks = [];
+				function animate(time) {
+					animationCallbacks.forEach(callback => callback(time));
+					requestAnimationFrame(animate);
+				}
 				requestAnimationFrame(animate);
-			}
-			requestAnimationFrame(animate);
 
-			function adjustCanvasDimensions() {
-				var scale = window.devicePixelRatio || 1;
-				//var width = window.innerWidth;
-				var width = 1024;
-				//var height = window.innerHeight;
-				var height = 600;
-				//canvas.width = width * scale;
-				canvas.width = width;
-				//canvas.height = height * scale;
-				canvas.height = height;
-				canvas.style.width = width + "px";
-				canvas.style.height = height + "px";
-			}
-			animationCallbacks.push(adjustCanvasDimensions);
-			adjustCanvasDimensions();
-
-			setStatusMode = function setStatusMode(mode) {
-
-				if (statusMode === mode || !initializing)
-					return;
-				[statusProgress, statusIndeterminate, statusNotice].forEach(elem => {
-					elem.style.display = 'none';
-				});
-				animationCallbacks = animationCallbacks.filter(function(value) {
-					return (value != animateStatusIndeterminate);
-				});
-				switch (mode) {
-					case 'progress':
-						statusProgress.style.display = 'block';
-						break;
-					case 'indeterminate':
-						statusIndeterminate.style.display = 'block';
-						animationCallbacks.push(animateStatusIndeterminate);
-						break;
-					case 'notice':
-						statusNotice.style.display = 'block';
-						break;
-					case 'hidden':
-						break;
-					default:
-						throw new Error('Invalid status mode');
+				function adjustCanvasDimensions() {
+					var scale = window.devicePixelRatio || 1;
+					//var width = window.innerWidth;
+					var width = 1024;
+					//var height = window.innerHeight;
+					var height = 600;
+					//canvas.width = width * scale;
+					canvas.width = width;
+					//canvas.height = height * scale;
+					canvas.height = height;
+					canvas.style.width = width + "px";
+					canvas.style.height = height + "px";
 				}
-				statusMode = mode;
-			}
+				animationCallbacks.push(adjustCanvasDimensions);
+				adjustCanvasDimensions();
 
-			function animateStatusIndeterminate(ms) {
+				setStatusMode = function setStatusMode(mode) {
 
-				var i = Math.floor(ms / INDETERMINATE_STATUS_STEP_MS % 8);
-				if (statusIndeterminate.children[i].style.borderTopColor == '') {
-					Array.prototype.slice.call(statusIndeterminate.children).forEach(child => {
-						child.style.borderTopColor = '';
+					if (statusMode === mode || !initializing)
+						return;
+					[statusProgress, statusIndeterminate, statusNotice].forEach(elem => {
+						elem.style.display = 'none';
 					});
-					statusIndeterminate.children[i].style.borderTopColor = '#dfdfdf';
-				}
-			}
-
-			setStatusNotice = function setStatusNotice(text) {
-
-				while (statusNotice.lastChild) {
-					statusNotice.removeChild(statusNotice.lastChild);
-				}
-				var lines = text.split('\n');
-				lines.forEach((line) => {
-					statusNotice.appendChild(document.createTextNode(line));
-					statusNotice.appendChild(document.createElement('br'));
-				});
-			};
-
-			engine.setProgressFunc((current, total) => {
-
-				if (total > 0) {
-					statusProgressInner.style.width = current/total * 100 + '%';
-					setStatusMode('progress');
-					if (current === total) {
-						// wait for progress bar animation
-						setTimeout(() => {
-							setStatusMode('indeterminate');
-						}, 500);
+					animationCallbacks = animationCallbacks.filter(function(value) {
+						return (value != animateStatusIndeterminate);
+					});
+					switch (mode) {
+						case 'progress':
+							statusProgress.style.display = 'block';
+							break;
+						case 'indeterminate':
+							statusIndeterminate.style.display = 'block';
+							animationCallbacks.push(animateStatusIndeterminate);
+							break;
+						case 'notice':
+							statusNotice.style.display = 'block';
+							break;
+						case 'hidden':
+							break;
+						default:
+							throw new Error('Invalid status mode');
 					}
+					statusMode = mode;
+				}
+
+				function animateStatusIndeterminate(ms) {
+
+					var i = Math.floor(ms / INDETERMINATE_STATUS_STEP_MS % 8);
+					if (statusIndeterminate.children[i].style.borderTopColor == '') {
+						Array.prototype.slice.call(statusIndeterminate.children).forEach(child => {
+							child.style.borderTopColor = '';
+						});
+						statusIndeterminate.children[i].style.borderTopColor = '#dfdfdf';
+					}
+				}
+
+				setStatusNotice = function setStatusNotice(text) {
+
+					while (statusNotice.lastChild) {
+						statusNotice.removeChild(statusNotice.lastChild);
+					}
+					var lines = text.split('\n');
+					lines.forEach((line) => {
+						statusNotice.appendChild(document.createTextNode(line));
+						statusNotice.appendChild(document.createElement('br'));
+					});
+				};
+
+				engine.setProgressFunc((current, total) => {
+
+					if (total > 0) {
+						statusProgressInner.style.width = current/total * 100 + '%';
+						setStatusMode('progress');
+						if (current === total) {
+							// wait for progress bar animation
+							setTimeout(() => {
+								setStatusMode('indeterminate');
+							}, 500);
+						}
+					} else {
+						setStatusMode('indeterminate');
+					}
+				});
+
+				function displayFailureNotice(err) {
+					var msg = err.message || err;
+					console.error(msg);
+					setStatusNotice(msg);
+					setStatusMode('notice');
+					initializing = false;
+				};
+
+				if (!Engine.isWebGLAvailable()) {
+					displayFailureNotice('WebGL not available');
 				} else {
 					setStatusMode('indeterminate');
+					engine.setCanvas(canvas);
+					engine.startGame(EXECUTABLE_NAME, MAIN_PACK).then(() => {
+						setStatusMode('hidden');
+						initializing = false;
+					}, displayFailureNotice);
 				}
-			});
-
-			function displayFailureNotice(err) {
-				var msg = err.message || err;
-				console.error(msg);
-				setStatusNotice(msg);
-				setStatusMode('notice');
-				initializing = false;
-			};
-
-			if (!Engine.isWebGLAvailable()) {
-				displayFailureNotice('WebGL not available');
-			} else {
-				setStatusMode('indeterminate');
-				engine.setCanvas(canvas);
-				engine.startGame(EXECUTABLE_NAME, MAIN_PACK).then(() => {
-					setStatusMode('hidden');
-					initializing = false;
-				}, displayFailureNotice);
-			}
-		})();
+			})();
+		}
 	//]]></script>
 </body>
 </html>
