--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 			border: 1px solid #45434e;
 			box-shadow: 0 0 1px 1px #2f2d35;
 		}
+		
+		/* Button display */
+		#play {
+			color: white;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+			background: rgb(66, 184, 221);
+		}
 
 
 		/* Status display
@@ -151,6 +159,10 @@
 	<script type='text/javascript'>//<![CDATA[
 		function runProgram()
 		{
+			// Remove the play button
+			var elmt = document.getElementById("play");
+			elmt.parentNode.removeChild(elmt);
+			// Start the game
 			var engine = new Engine;
 			var setStatusMode;
 			var setStatusNotice;
