--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 	<div id='header'>
 		<h1>Welcome to the BrisbaneSDE Virtual Art Gallery</h1>
 		<p>Click on the <b>Play</b> button above to start.</p>
+		<p>Please note that there is a short delay between when the loading animation disappears and the game appears..</p>
 	</div>
 	<div id='status'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
