Music description update

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	<div id='header'>
 		<h1>Welcome to the BrisbaneSDE Virtual Art Gallery</h1>
 		<p>Click on the <b>Play</b> button above to start.</p>
-		<p>Please note that there is a short delay between when the loading animation disappears and the game appears..</p>
+		<p>Please note that there is a short delay between when the loading animation disappears and the game appears. If your browser state that a script is causing delays, and asks you if you would like to end it or wait, please click wait (this might happen a few times).</p>
 	</div>
 	<div id='status'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
