Updating index play button

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		Please try updating or use a different browser.
 	</canvas>
 	<div id='start'>
-		<button id='play'onclick='runProgram()'>Play</button>
+		<button id='play'onclick='runProgram()'>Start</button>
 	</div>
 	<div id='header'>
 		<h1>Welcome to the BrisbaneSDE Virtual Art Gallery</h1>
