--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 	</div>
 	<div id='header'>
 		<h1>Welcome to the BrisbaneSDE Virtual Art Gallery</h1>
-		<p>Click on the <b>Play</b> button above to start.</p>
-		<p>Please note that there is a short delay between when the loading animation disappears and the gallery appears.<br>If your browser states that a script is causing delays, and asks you if you would like to end it or wait, please click wait (this might happen a few times).</p>
+		<p>Click on the <b>Start</b> button above to start the gallery.</p>
+		<p>Please note that there is a delay between when the loading animation disappears and the gallery appears.<br>If your browser states that a script is causing delays, and asks you if you would like to end it or wait, please click wait (this might happen a few times).</p>
 	</div>
 	<div id='status'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
